--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 	<body>
 		<div id="calc">
 			<div id="display">
-				<div id="prevDis">0</div>
-				<div id="currDis">0</div>
+				<div id="prevDis"></div>
+				<div id="currDis"></div>
 			</div>
 			<div id="panel">
 				<span class="op">+</span>
@@ -22,16 +22,22 @@
 				<span>7</span>
 				<span>8</span>
 				<span>9</span>
-				<span class="op equal">=</span>
+				<span class="delete">←</span>
 				<span>4</span>
 				<span>5</span>
 				<span>6</span>
+				<span class="history">HIS</span>
 				<span>1</span>
 				<span>2</span>
 				<span>3</span>
+				<span class="equal">=</span>
 				<span>0</span>
 				<span>.</span>
-				<span class="op">C</span>
+				<span class="clear">C</span>
+				<div class="modal">
+					<a class="close">close</a>
+					<div id="root"></div>
+				</div>
 			</div>
 		</div>
 	</body>
